# call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml  set-local.sh
data/input/: function_calling_tests.json
data/output/: function_calling_results.json
src/: __main__.py
src/io/: reader.py
src/llm/: prompt.py  prompt_builder.py  wrapper.py
src/object/: Func_def.py  Parse.py  Prompt_io.py  data_enter.py  debug.py  parse.py
