[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "llm-sdk",
    "mypy>=2.1.0",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }
